Revision history for App-Doh

          - Posts list indents / outdents correctly
          - Added JS navbar scroller
          - Debugging static posts
          - Added Deutche PO file
          - Updated metadata
          - Can create CSS one theme at a time
          - Post lists working
          - Refactored get_stash load_page and navigation model calls
          - Added Posts model. Created Functions and Role::PageLoading
          - Added metadata to markdown files
          - Added generate and view static links
          - Excluded Markdown class from POD help listing
          - Fixed CSS bug. Editor textarea back at full width
          - Just one word. Serve the static html through Plack server
          - Changed markdown class from bash to shell .md files
          - Added support for triple grave in Markdown
          - Moved input scrubbing function to the Request object

0.2.1     2014-04-25 13:29:02
          - Bumped version for release
          - Changed install to run with notests since too much fail on CPAN
          - And we're done
          - Documentation updates
          - Debug set through environment variable
          - Search remembers query term
          - Fixed Firefox secret button styling
          - Added text searching using App::Ack
          - Renaming skins to templates
          - Moved asset directory under docs path
          - Fixed cache invalidation
          - Added make_css method to ::CLI
          - Added file upload to asset directory
          - Updated highlight.js and colour scheme
          - Fixed output from Pod::Xhtml. Indexes work
          - Navigation uses new iterator. No more hidden state
          - Rewriting docs tree walker
          - Refactored docs tree to cache and recalculate on update
          - Added XML view
          - Added Test::Warnings as a dependenct to fix P:M:LogErrors
          - Started to add create screen