@@ -2,12 +2,12 @@ package App::Doh::Model;
 
 use namespace::sweep;
 
-use Moo;
 use App::Doh::Functions    qw( show_node );
 use Class::Usul::Constants qw( NUL );
 use Class::Usul::Time      qw( str2time time2str );
 use HTTP::Status           qw( HTTP_BAD_REQUEST HTTP_OK );
 use Scalar::Util           qw( weaken );
+use Moo;
 
 extends q(App::Doh);
 
