@@ -2,11 +2,11 @@ package App::Doh::View::HTML::Markdown;
 
 use namespace::sweep;
 
-use Moo;
 use App::Doh::Markdown;
 use Class::Usul::Types qw( ArrayRef Object );
 use Scalar::Util       qw( blessed );
 use YAML::Tiny;
+use Moo;
 
 extends q(App::Doh);
 
