@@ -2,12 +2,12 @@ package App::Doh::View::HTML::Pod;
 
 use namespace::sweep;
 
-use Moo;
 use Class::Usul::Constants qw( TRUE );
 use Class::Usul::Types     qw( ArrayRef NonEmptySimpleStr Object Str );
 use HTML::Accessors;
 use Pod::Hyperlink::BounceURL;
 use Pod::Xhtml;
+use Moo;
 
 extends q(App::Doh);
 
